# GIT_learning

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  sf.cpp  shader.vsh  tttt.txt
include/: accelerateGrid.h  geometry.h  physicalSolver.h  threadPool.hpp
shader/: fragment.frag  vertex.vert
src/: accelerateGrid.cpp  geometry.cpp  physicalSolver.cpp
volumeData/: slice0.npy  slice1.npy  slice10.npy  slice100.npy  slice101.npy  slice102.npy  slice103.npy  slice104.npy  slice105.npy  slice106.npy  slice107.npy  slice108.npy  slice109.npy  slice11.npy  slice110.npy  slice111.npy  slice112.npy  slice113.npy  slice114.npy  slice115.npy  slice116.npy  slice12.npy  slice13.npy  slice14.npy  slice15.npy  slice16.npy  slice17.npy  slice18.npy  slice19.npy  slice2.npy  slice20.npy  slice21.npy  slice22.npy  slice23.npy  slice24.npy  slice25.npy  slice26.npy  slice27.npy  slice28.npy  slice29.npy  (+77 more)
volumeSrc/: glad.c  main.cpp
